[package]
name = "downloader"
version = "0.1.0"
authors = ["Randoms <newnewton@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = "0.4"